--- a/index3.html
+++ b/index3.html
@@ -1,9 +1,17 @@
 <html>
-    <h1> yaswanth sai</h1>
-   <hr>
-        <h4>Education: B.Tech</h4>
-        <h4>skill: Web Development</h4>   
-        <h4>Experience: 5 years</h4>
-        <h4>Languages:C, C++,JAVA, PYTHON</h4>
-   <a href="index.html">HEllo link</a>
-</html>/
+    <form action="">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name"><br>
+
+        <label for="age">Age:</label>
+        <input type="number" id="age" name="age"><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email"><br>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password"><br>
+
+        <input type="submit" value="Submit">
+    </form>
+</html>
